--- a/src/styles/_tokens.scss
+++ b/src/styles/_tokens.scss
@@ -110,6 +110,7 @@
   --spacing-lg: 24px;
   --spacing-xl: 32px;
   --spacing-xxl: 48px;
+  --spacing-icon: 10px;
 
   // Border radius
   --radius-xs: 2px;
