--- a/src/components/atoms/Icon/Icon.module.scss
+++ b/src/components/atoms/Icon/Icon.module.scss
@@ -10,37 +10,37 @@
 
   // Size variants
   &.size-xs {
-    width: 16px;
-    height: 16px;
-    font-size: 16px;
+    width: var(--icon-size-sm);
+    height: var(--icon-size-sm);
+    font-size: var(--icon-size-sm);
     padding: var(--spacing-icon);
   }
 
   &.size-sm {
-    width: 20px;
-    height: 20px;
-    font-size: 20px;
+    width: var(--icon-size-md);
+    height: var(--icon-size-md);
+    font-size: var(--icon-size-md);
     padding: var(--spacing-icon);
   }
 
   &.size-md {
-    width: 24px;
-    height: 24px;
-    font-size: 24px;
+    width: var(--icon-size-md);
+    height: var(--icon-size-md);
+    font-size: var(--icon-size-md);
     padding: var(--spacing-icon);
   }
 
   &.size-lg {
-    width: 28px;
-    height: 28px;
-    font-size: 28px;
+    width: var(--icon-size-lg);
+    height: var(--icon-size-lg);
+    font-size: var(--icon-size-lg);
     padding: var(--spacing-icon);
   }
 
   &.size-xl {
-    width: 36px;
-    height: 36px;
-    font-size: 36px;
+    width: var(--icon-size-xl);
+    height: var(--icon-size-xl);
+    font-size: var(--icon-size-xl);
     padding: var(--spacing-icon);
   }
 
