--- a/src/components/atoms/Input/Input.module.scss
+++ b/src/components/atoms/Input/Input.module.scss
@@ -402,3 +402,36 @@
     color: var(--color-blue-6);
   }
 }
+
+// Password toggle button
+.passwordToggle {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.2s ease-in-out;
+  color: var(--color-gray-5);
+
+  &:hover:not(:disabled) {
+    color: var(--color-blue-6);
+    transform: scale(1.05);
+  }
+
+  &:active:not(:disabled) {
+    transform: scale(0.95);
+  }
+
+  &:disabled {
+    opacity: var(--opacity-50);
+    cursor: not-allowed;
+  }
+
+  &:focus {
+    outline: 2px solid var(--color-blue-6);
+    outline-offset: 2px;
+    border-radius: var(--radius-sm);
+  }
+}
